@@ -1,5 +1,7 @@
 LIST OF CHANGES for npg_ranger project
 
+  - show error in log when controller tests fail to cleanup
+
 release 0.7.0
   - use npg_ranger server for roundtrip tests
   - add prototype for reference resolve
